--- a/src/components/molecules/PerfumeMenu/PerfumeMenu.scss
+++ b/src/components/molecules/PerfumeMenu/PerfumeMenu.scss
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-   
+    // position: relative;
+    // overflow: hidden;
 
     .p-cntImage {
         width: 250px;
         height: 250px;
         position: relative;
         overflow: hidden;
+        cursor: pointer;
 
         &::after{
             content: "";
@@ -42,13 +44,46 @@
             object-fit: cover;
             border-radius: 10px;
         }
+
+        .p-hover{
+            position: absolute;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            height: 250px;
+            background: #ffd8e180;
+            border-radius: 10px;
+            transition: 0.5s;
+            z-index: 2;
+    
+        }
+
+        &:hover{
+            .p-hover{
+                left: 0;
+                transition: 0.5s;
+            }
+        }
     }
 
     .p-cntInfo {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
 
         .p-name {
             font-size: 17px;
             color: #9e9e9e;
+        }
+
+        .p-cntStar{
+            display: flex;
+            gap: 15px;
+            align-items: center;
+
+            .label-total{
+                color: rgba(0, 0, 0, 0.5);
+            }
         }
 
     }
