--- a/src/components/molecules/PerfumeMenu/PerfumeMenu.scss
+++ b/src/components/molecules/PerfumeMenu/PerfumeMenu.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 250px;
     // position: relative;
     // overflow: hidden;
 
@@ -12,31 +13,7 @@
         overflow: hidden;
         cursor: pointer;
 
-        &::after{
-            content: "";
-            position: absolute;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            top: -36px;
-            width: 75px;
-            height: 75px;
-            background: #e95e7e;
-            transform: rotate(45deg);
-            right: -38px;
-        }
 
-        &::before{
-            content: "Top";
-            position: absolute;
-            top: 10px;
-            right: 3px;
-            color: #fff;
-            font-weight: bold;
-            z-index: 1;
-            transform: rotate(45deg);
-        }
 
         .p-image {
             width: 100%;
@@ -56,6 +33,26 @@
             transition: 0.5s;
             z-index: 2;
     
+        }
+
+        .p-top{
+            position: absolute;
+            top: -11px;
+            right: -34px;
+            border-left: 50px solid transparent;
+            border-right: 50px solid transparent;
+            border-bottom: 50.6px solid #e95e7e;
+            transform: rotate(45deg);
+
+            .p-labelTop{
+                position: absolute;
+                top: 25px;
+                left: -10px;  
+                color: #fff;
+                font-size: 16px;
+                font-weight: bold;
+
+            }
         }
 
         &:hover{
