changes in TextArea

--- a/src/components/atoms/TextArea/TextArea.scss
+++ b/src/components/atoms/TextArea/TextArea.scss
@@ -8,6 +8,7 @@
 
     .text-area {
         border: 1px solid #e89998;
+        font-family: "Metropolis", sans-serif;
         border-radius: 5px;
         font-size: 14px;
         height: 150px;
